--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
     "react-markdown": "^10.1.0",
+    "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
